fix: text alignment with ul

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -91,7 +91,7 @@ h2, h3, h4, h5, h6, .toc, .nav__title {
     font-size: 0.9em;
 }
 
-.page__content p {
+.page__content p, ul {
     text-align: justify;
 }
 
